--- a/next1.html
+++ b/next1.html
@@ -10,6 +10,7 @@
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     </head>
+    <body>
     <div class="notshow">
 <span id="arrow-circle"><i class="fa fa-arrow-circle-o-left" style="font-size:24px"></i>
 </span>
@@ -31,44 +32,15 @@
         <label for="todo">pending task</label>
     </form>
   <i class="button">  <span class="glyphicon glyphicon-plus-sign"></span></i>
-
 </div>
 </div>
-<div id="navbutton">
-    <div id="home">
-        <i class="fa fa-home" style="font-size:36px"></i>        
-        </div>
-<div class="left-arrow">
-    <a href="index.html" style="font-size:24px" class="fa">&#xf053;> </a>
-  </div>
-  <div>
-    <span id="numeric"> 4 of 4</span>
-  </div>
-  
-    <div class="right-arrow">
-        <a href="next.html" class="fa fa-chevron-right" style="font-size:24px"></a>
-    </div>
-          </div>
-    </div>
 </div>
 <div class="pop-up">
     <center> <p class="add-new">Add new item</p></center>
     <center> <textarea class="pop-upbar"></textarea></center>
     <button class="pop-up-button">ADD</button></div>
- <div id="navbutton">
-    <div id="home">
-        <i class="fa fa-home" style="font-size:36px"></i>        
-        </div>
-<div class="left-arrow">
-    <a href="next.html" style="font-size:24px" class="fa">&#xf053;</i>
-  </div>
-  <div>
-    <span id="numeric">1 of 4</span>
-  </div>
+
   
-    <div class="right-arrow">
-        <a href="index.html" class="fa fa-chevron-right" style="font-size:24px" ></a></i>
-    </div>
 <body>
     
 </body>
