--- a/nextpage.html
+++ b/nextpage.html
@@ -9,16 +9,12 @@
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     </head>
-<span id="arrow-circle"><i class="fa fa-arrow-circle-o-left" style="font-size:24px"></i>
-</span>
-
-    <div class="div">
-    <h1 class="heading">Trip to Paris</h1>
-<p id="back">Back</p></div>
-
+    <body>
+    <h1 class="heading">Trip to Paris</h1><a href="index.html"><div class=" fa fa fa-arrow-circle-o-left" style="font-size:25px"></div></a>
+<p id="back">Back<a href="index.html"></p>
 <div class="card">
     <div class="div1">
-        <p>trip to paris</p> 
+        <p>trip to paris</p>
     </div>
     <div class="div2">
         <p>completed task</p>
@@ -28,29 +24,10 @@
         <input type="checkbox" name="todo" id="check">
         <label for="todo">pending task</label>
     </form>
-  <i class="button">  <span class="glyphicon glyphicon-plus-sign"></span></i>
-
+    <a href="next1.html"><div class="glyphicon glyphicon-plus-sign" style="font-size:25px;color:green"></div></a>
 </div>
 </div>
-<div id="navbutton">
-    <div id="home">
-        <i class="fa fa-home" style="font-size:36px"></i>        
-        </div>
-<div class="left-arrow">
-    <a href="index.html" style="font-size:24px" class="fa" > &#xf053;</a>
-  </div>
-  <div>
-    <span id="numeric">2 of 4</span>
-  </div>
-  
-    <div class="right-arrow">
-        <a href="next.html" class="fa fa-chevron-right" style="font-size:24px" ></a></i>
-    </div>
-          </div>
-    </div>
 </div>
-
-<body>
     
 </body>
 </html>
